--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <html>
     <head>
-        <title>HOLA desde Chima</title>
+        <title>HOLA</title>
     </head>
     <body>
         <b>Hola Mundo y otros mensajes</b>
         <b>Este es mi primer Repositorio</b>
-        <b>PROBANDOR 1</b>
     </body>
 </html>
